--- a/_config.next.yml
+++ b/_config.next.yml
@@ -43,7 +43,7 @@ theme_config:
   #scheme: Gemini
 
   # Dark Mode
-  darkmode: false
+  darkmode: true
 
 
   # ---------------------------------------------------------------
