--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle: "1949hacker's Blog - 探索知识的宇宙"
 description: "1949hacker's Blog - 探索知识的宇宙"
 keywords: 1949hacker
 author: 1949hacker
-language: zh_CN
+language: zh-CN
 timezone: 'Asia/Chongqing'
 
 # URL
