--- a/_config.next.yml
+++ b/_config.next.yml
@@ -199,7 +199,7 @@ theme_config:
   # ---------------------------------------------------------------
 
   # Show multilingual switcher in footer.
-  language_switcher: false
+  language_switcher: true
 
   footer:
     # Specify the year when the site was setup. If not defined, current year will be used.
