--- a/_config.yml
+++ b/_config.yml
@@ -103,3 +103,11 @@ theme: next
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: ''
+
+
+#local search
+search:
+path: search.xml
+field: post
+format: html
+limit: 10000
