--- a/_config.next.yml
+++ b/_config.next.yml
@@ -272,7 +272,8 @@ reward:
   wechatpay: /images/wechatpay.jpg
   alipay: /images/alipay.jpg
   #paypal: /images/paypal.png
-  #bitcoin: /images/bitcoin.png
+  okx: /images/okx.jpg
+  xmr: /images/xmr.jpg
 
 # Subscribe through Telegram Channel, Twitter, etc.
 # Usage: `Key: permalink || icon` (Font Awesome)
