--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: "1949hacker's Blog - 探索知识的宇宙"
 subtitle: "1949hacker's Blog - 探索知识的宇宙"
 description: "1949hacker's Blog - 探索知识的宇宙"
-keywords: 1949hacker
+keywords: "1949hacker"
 author: 1949hacker
 language: zh-CN
 timezone: 'Asia/Chongqing'
