--- a/_config.next.yml
+++ b/_config.next.yml
@@ -801,11 +801,11 @@ plausible:
 # Show number of visitors of each article.
 # You can visit https://www.leancloud.cn to get AppID and AppKey.
 leancloud_visitors:
-  enable: false
-  app_id: # <your app id>
-  app_key: # <your app key>
+  enable: true
+  app_id: InX8PD5JXeBNEJNbS8PdwJGP-gzGzoHsz # <your app id>
+  app_key: Rtl7eK6O4lYTW7rhySuIrQ3P # <your app key>
   # Required for apps from CN region
-  server_url: # <your server url>
+  server_url: https://1949hacker.cn/ # <your server url>
   # Dependencies: https://github.com/theme-next/hexo-leancloud-counter-security
   # If you don't care about security in leancloud counter and just want to use it directly
   # (without hexo-leancloud-counter-security plugin), set `security` to `false`.
