--- a/_config.next.yml
+++ b/_config.next.yml
@@ -801,15 +801,15 @@ plausible:
 # Show number of visitors of each article.
 # You can visit https://www.leancloud.cn to get AppID and AppKey.
 leancloud_visitors:
-  enable: false
+  enable: true
   app_id: 7Lox1BgpUUuHQiZ0pEnbWhqC-MdYXbMMI # <your app id>
   app_key: 4PCqALYUq2jO0dlxESO7rP4g # <your app key>
   # Required for apps from CN region
-  server_url: # <your server url>
+  server_url: https://1949hacker.cn # <your server url>
   # Dependencies: https://github.com/theme-next/hexo-leancloud-counter-security
   # If you don't care about security in leancloud counter and just want to use it directly
   # (without hexo-leancloud-counter-security plugin), set `security` to `false`.
-  security: true
+  security: false
 
 # Another tool to show number of visitors to each article.
 # Visit https://console.firebase.google.com/u/0/ to get apiKey and projectId.
