--- a/_config.next.yml
+++ b/_config.next.yml
@@ -801,11 +801,11 @@ plausible:
 # Show number of visitors of each article.
 # You can visit https://www.leancloud.cn to get AppID and AppKey.
 leancloud_visitors:
-  enable: true
-  app_id: 7Lox1BgpUUuHQiZ0pEnbWhqC-MdYXbMMI # <your app id>
-  app_key: 4PCqALYUq2jO0dlxESO7rP4g # <your app key>
+  enable: false
+  app_id: # <your app id>
+  app_key: # <your app key>
   # Required for apps from CN region
-  server_url: https://1949hacker.cn # <your server url>
+  server_url: # <your server url>
   # Dependencies: https://github.com/theme-next/hexo-leancloud-counter-security
   # If you don't care about security in leancloud counter and just want to use it directly
   # (without hexo-leancloud-counter-security plugin), set `security` to `false`.
@@ -931,7 +931,7 @@ waline:
   pageSize: 10 # 评论数量多少时显示分页
   lang: zh-cn # 语言, 可选值: en, zh-cn
   # Warning: 不要同时启用 `waline.visitor` 以及 `leancloud_visitors`.
-  visitor: false # 文章阅读统计
+  visitor: true # 文章阅读统计
   comment_count: true # 如果为 false , 评论数量只会在当前评论页面显示, 主页则不显示
   requiredFields: [nick] # 设置用户评论时必填的信息，[nick,mail]: [nick] | [nick, mail]
   libUrl: # Set custom library cdn url
