--- a/_config.next.yml
+++ b/_config.next.yml
@@ -279,7 +279,7 @@ reward:
 follow_me:
   #Twitter: https://twitter.com/username || fab fa-twitter
   Telegram: https://t.me/hacker1949 || fab fa-telegram
-  e-mail: mailto:scepter@1949hacker.cn || fab fa-envelope
+  e-mail: mailto:0@hackerbs.com || fab fa-envelope
   WeChat: /images/wechat_channel.jpg || fab fa-weixin
   #RSS: /atom.xml || fa fa-rss
 
@@ -677,7 +677,7 @@ comments:
 # For more information: https://disqus.com
 disqus:
   enable: false
-  shortname: 1949hacker
+  shortname: hackerbs
   count: true
 
 # DisqusJS
@@ -923,7 +923,7 @@ images: images
 # For more information: https://waline.js.org, https://github.com/walinejs/waline
 waline:
   enable: false #是否开启
-  serverURL: waline.1949hacker.cn # Waline #服务端地址，我们这里就是上面部署的 Vercel 地址
+  serverURL: waline.hackerbs.com # Waline #服务端地址，我们这里就是上面部署的 Vercel 地址
   placeholder: 请文明评论！ # #评论框的默认文字
   avatar: mm # 头像风格
   meta: [nick, mail, link] # 自定义评论框上面的三个输入框的内容
