--- a/_config.next.yml
+++ b/_config.next.yml
@@ -284,7 +284,8 @@ reward:
 follow_me:
   #Twitter: https://twitter.com/username || fab fa-twitter
   # Telegram: https://t.me/hacker1949 || fab fa-telegram
-  e-mail: mailto:0@hackerbs.com || fab fa-envelope
+  GitHub: https://github.com/1949hacker || fab fa-github
+  e-mail: mailto:ly4012@hw.ac.uk || fab fa-envelope
   WeChat: /images/wechat_channel.jpg || fab fa-weixin
   #RSS: /atom.xml || fa fa-rss
 
