--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: "hackerbs's Blog - 探索知识的宇宙"
 keywords: hackerbs,hacker,brainstorm,头脑风暴,Linux,Debian
 author: hackerbs.com
 language: zh-CN
-timezone: 'Asia/Chongqing'
+timezone: 'Asia/Singapore'
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
